--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tianfengfrank.GitHub.io by tianfengfrank</title>
+    <title>The Website of Frank TIAN</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>Tianfengfrank.GitHub.io</h1>
-        <p>My Website</p>
+        <h1>Hi, I'am Feng Tian.</h1>
+        <p>Welcome to my Web page</p>
       </header>
 
       <div id="banner">
