--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Hi, I'am Feng Tian.</h1>
+        <h1>Hi, I'm Feng TIAN, I am (a) Frank.</h1>
         <p>Welcome to my Web page</p>
       </header>
 
