--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text3>INTEREST</div>
 <div class=text4>MY CV</div>
 <div class=text5>PUBLICATIONS</div>
-<div class=text6><a href=a href=contact.html target=_parent>CONTACT</a></div>
+<div class=text6><a href=a href=contact.html>CONTACT</a></div>
 <div class=text7>I am Frank. graduate student from Dalian University of Technology.<br></div>
 <div class=text8><a href=http://www.htmlegg.com target=_self>Made with HTML Egg on a Mac</a></div>
 
