--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <body bgcolor=#FFFFFF leftmargin=0 topmargin=0>
 <div id=content>
 <div class=text0>CONTACT</div>
-<div class=text1>ABOUT</div>
+<div class=text1><a href=index.html target=_self>ABOUT</a></div>
 <div class=text2>INTEREST</div>
 <div class=text3>MY CV</div>
 <div class=text4>PUBLICATIONS</div>
-<div class=text5>CONTACT</div>
+<div class=text5><a href=contact.html target=_self>CONTACT</a></div>
 <div class=text6>E-Mail: feng.frank.tian@gmail.com<br><br>Address: School of Software Technology, Dalian University of Technology, <br>No.321 Tuqiang Street, Economy & Technology Development Zone, Dalian,<br>Liaoning, People's Republic of China, 116620<br><br>Mobile: +86-13153623816</div>
 <div class=text7><a href=http://www.htmlegg.com target=_self>Made with HTML Egg on a Mac</a></div>
 
