--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text3>MY CV</div>
 <div class=text4>PUBLICATIONS</div>
 <div class=text5><a href=contact.html target=_self>CONTACT</a></div>
-<div class=text6><a href="Mailto:feng.frank.tian@gmail.com">E-Mail: feng.frank.tian@gmail.com</a><br><br>Address: School of Software Technology, Dalian University of Technology, <br>No.321 Tuqiang Street, Economy & Technology Development Zone, Dalian,<br>Liaoning, People's Republic of China, 116620<br><br>Mobile: +86-13153623816</div>
+<div class=text6><a href="Mailto:feng.frank.tian@gmail.com"><U>E-Mail: feng.frank.tian@gmail.com<\U></a><br><br>Address: School of Software Technology, Dalian University of Technology, <br>No.321 Tuqiang Street, Economy & Technology Development Zone, Dalian,<br>Liaoning, People's Republic of China, 116620<br><br>Mobile: +86-13153623816</div>
 <div class=text7><a href=http://www.htmlegg.com target=_self>Made with HTML Egg on a Mac</a></div>
 
 <div class=image7 title=""></div>
