--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <body bgcolor=#FFFFFF leftmargin=0 topmargin=0>
 <div id=content>
 <div class=text0>Feng TIAN</div>
-<div class=text1>Man errs so long as he strives.<br>--Goethe</div>
+<div class=text1>Man errs so long as he strives. --Goethe</div>
 <div class=text2><a href=index.html target=_self>ABOUT</a></div>
 <div class=text3>INTEREST</div>
 <div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
