--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text0>Feng TIAN</div>
 <div class=text1>Man errs so long as he strives. --Goethe</div>
 <div class=text2><a href=index.html target=_self>ABOUT</a></div>
-<div class=text3>INTEREST</div>
+<div class=text3><a href=interest.html target=_self>INTEREST</div>
 <div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
-<div class=text5>PUBLICATIONS</div>
+<div class=text5><a href=publications.html target=_self>PUBLICATIONS</div>
 <div class=text6><a href=contact.html target=_self>CONTACT</a></div>
-<div class=text7>I am Frank. graduate student from Dalian University of Technology.</div>
+<div class=text7>I am Frank. graduate student from Dalian University of Technology who is in major of Computer Science and Network Measurements. I am enthusiastic about football and fantastic new technologies. The research to me is the key to the brand new world.</div>
 
 <div class=image7 title=""></div>
 <div class=image9 title=""></div>
