--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
 <div class=text5><a href=publications.html target=_self>PUBLICATIONS</div>
 <div class=text6><a href=contact.html target=_self>CONTACT</a></div>
-<div class=text7>I am Frank. graduate student from Dalian University of Technology who is in major of Computer Science and Network Measurements. I am enthusiastic about football and fantastic new technologies. The research to me is the key to the brand new world.</div>
+<div class=text7>I am Frank. graduate student from Dalian University of Technology who is in major of Computer Science and Network Measurements. 
+  I am enthusiastic about football and fantastic new technologies. The research to me is the key to the brand new world.</div>
 
 <div class=image7 title=""></div>
 <div class=image9 title=""></div>
