--- a/interest.html
+++ b/interest.html
@@ -51,11 +51,11 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div id=content>
 <div class=text0>INTEREST</div>
 <div class=text1></div>
-<div class=text2>ABOUT</div>
-<div class=text3>INTEREST</div>
-<div class=text4><a href=TianfengCV.pdf target=_blank>MY CV</a></div>
-<div class=text5>PUBLICATIONS</div>
-<div class=text6><a href=contact.html target=_blank>CONTACT</a></div>
+<div class=text2><a href=index.html target=_self>ABOUT</div>
+<div class=text3><a href=interest.html target=_self>INTEREST</div>
+<div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
+<div class=text5><a href=publications.html target=_self>PUBLICATIONS</div>
+<div class=text6><a href=contact.html target=_self>CONTACT</a></div>
 <div class=text7>    I prefer the research which can be practically implemented and utilized in our daily life. These research are supposed to be based on the data measuered from reality and analyzed by the method such as statistic method. And also,</div>
 
 <div class=image7 title=""></div>
