--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div id=content>
 <div class=text0>CONTACT</div>
 <div class=text1><a href=index.html target=_self>ABOUT</a></div>
-<div class=text2><a href=interest.html target=_self>INTEREST</div>
-<div class=text3><a href=TianfengCV.pdf>MY CV</div>
-<div class=text4><a href=publications.html target=_self>PUBLICATIONS</div>
+<div class=text2><a href=interest.html target=_self>INTEREST</a></div>
+<div class=text3><a href=TianfengCV.pdf>MY CV</a></div>
+<div class=text4><a href=publications.html target=_self>PUBLICATIONS</a></div>
 <div class=text5><a href=contact.html target=_self>CONTACT</a></div>
 <div class=text6><a href="Mailto:feng.frank.tian@gmail.com">E-Mail: <U>feng.frank.tian@gmail.com</U></a><br><br>Address: School of Software Technology, Dalian University of Technology, <br>No.321 Tuqiang Street, Economy & Technology Development Zone, Dalian,<br>Liaoning, People's Republic of China, 116620<br><br>Mobile: +86-13153623816</div>
 
