--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text1>Man errs so long as he strives. --Goethe</div>
 <div class=text2><a href=index.html target=_self>ABOUT</a></div>
 <div class=text3><a href=interest.html target=_self>INTEREST</a></div>
-<div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
+<div class=text4><a href=TianfengCV.pdf target=_blank>MY CV</a></div>
 <div class=text5><a href=publications.html target=_self>PUBLICATIONS</a></div>
 <div class=text6><a href=contact.html target=_self>CONTACT</a></div>
 <div class=text7>I am Frank. graduate student from Dalian University of Technology who is in major of Computer Science and Network Measurements. 
