--- a/interest.html
+++ b/interest.html
@@ -53,7 +53,7 @@ table, td, th{border:0px solid black; padding:0px;text-align:left;vertical-align
 <div class=text1></div>
 <div class=text2><a href=index.html target=_self>ABOUT</a></div>
 <div class=text3><a href=interest.html target=_self>INTEREST</a></div>
-<div class=text4><a href=TianfengCV.pdf>MY CV</a></div>
+<div class=text4><a href=TianfengCV.pdf target=_blank>MY CV</a></div>
 <div class=text5><a href=publications.html target=_self>PUBLICATIONS</a></div>
 <div class=text6><a href=contact.html target=_self>CONTACT</a></div>
 <div class=text7>    I prefer the research which can be practically implemented and utilized in our daily life. These research are supposed to be based on the data measuered from reality and analyzed by the method such as statistic method. And also,</div>
