--- a/interest.html
+++ b/interest.html
@@ -1,7 +1,7 @@
 <!--Classic 12-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
-<title>Classic 12</title>
+<title>Frank's Research Interest</title>
 <meta name='viewport' content='width=957'>
 <meta name='Generator' content='HTML Egg for Mac 5.37'>
 <meta name="keywords" content="">
